--- a/resumo.html
+++ b/resumo.html
@@ -26,7 +26,7 @@
 <body>
   <header class="intro" role="banner">
     <img src="img/perfilkarine.jpeg" alt="Foto da Truca sorrindo" class="avatar" loading="eager" decoding="async" />
-    <h1>Bem-vinda, <span>kaka</span> 💕<br/>Vamos decidir nosso próximo date?</h1>
+    <h1>Bora ver o resumo das coisas? selecione o date e relembre😎</h1>
   </header>
 
   <!-- Botão para voltar ao início -->
@@ -34,13 +34,13 @@
     <a href="inicio.html" class="btn-inicio">⬅ Voltar ao Início</a>
   </div>
 
- <div style="text-align:center;">
-    <a href="resumo.html" class="btn-inicio">Resumo dos dates</a>
-  </div>
-
-   <div style="text-align:center;">
-    <a href="inicio.html" class="btn-inicio">próximos dates</a>
-  </div>
+        <!-- Hamburgueria A Cúpula abre nova página -->
+      <a class="card" href="cupularesumo.html" aria-label="Hamburgueria A Cúpula">
+        <img src="img/cupulaimg.png" alt="Ambiente da Hamburgueria A Cúpula" loading="lazy" decoding="async" />
+        <h2>Hamburgueria A Cúpula</h2>
+        <p>Hambúrguer artesanal com vista 10/10 🍔🔥</p>
+      </a>
+ 
   <script defer src="script.js"></script>
 </body>
 </html>
