--- a/bardoleo.html
+++ b/bardoleo.html
@@ -134,14 +134,14 @@
 <body>
   <header class="intro" role="banner">
     <img src="img/perfilkarine.jpeg" alt="Foto da Truca sorrindo" class="avatar" />
-    <h1>Bora ver o resumo na Cupula? 😎</h1>
+    <h1>Bora ver o resumo no bar do leo? 😎</h1>
   </header>
 
   <!-- 📸 Animação das imagens lado a lado -->
   <section class="photo-stage">
-    <img src="img/euekakacupula.jpeg" alt="Momentos do date - 1" class="photo" />
-    <img src="img/kakaurguer.jpeg" alt="Momentos do date - 2" class="photo" />
-    <img src="img/cupulahamburger.jpeg" alt="Momentos do date - 3" class="photo" />
+    <img src="img/leo1.jpeg" alt="Momentos do date - 1" class="photo" />
+    <img src="img/leo2.jpeg" alt="Momentos do date - 2" class="photo" />
+    <img src="img/leo3.jpeg" alt="Momentos do date - 3" class="photo" />
   </section>
 
   <!-- Botão para voltar ao início -->
@@ -150,19 +150,6 @@
   </div>
 
 
-  <!-- 🗺️ Mapa -->
-  <section class="map-section">
-    <h2>📍Onde foi?</h2>
-    <div class="map-wrap">
-      <iframe
-        src="https://www.google.com/maps?q=-12.9548576,-38.5007424&hl=pt-BR&z=17&output=embed"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        title="Mapa - A Cúpula Burguer">
-      </iframe>
-    </div>
-  </section>
 
   <script defer src="script.js"></script>
 </body>
