--- a/sessoes.html
+++ b/sessoes.html
@@ -39,7 +39,7 @@
   </div>
 
    <div style="text-align:center;">
-    <a href="inicio.html" class="btn-inicio">próximos dates</a>
+    <a href="index.html" class="btn-inicio">próximos dates</a>
   </div>
   <script defer src="script.js"></script>
 </body>
