--- a/inicio.html
+++ b/inicio.html
@@ -116,13 +116,13 @@
 </head>
 <body>
   <div class="animation-container">
-    <img src="img/cupulaimg.png" class="img-left" alt="Imagem 1" />
-    <img src="img/cupulaimg.png" class="img-right" alt="Imagem 2" />
-    <img src="img/cupulaimg.png" class="img-final" alt="Imagem Final" />
+    <img src="img/castrinho.jpeg" class="img-left" alt="Imagem 1" />
+    <img src="img/karine.jpeg" class="img-right" alt="Imagem 2" />
+    <img src="img/euekakacupula.jpeg" class="img-final" alt="Imagem Final" />
   </div>
 
-  <h1>✨ Fique rodeada do que te faz bem ✨</h1>
-  <h2>Eu: rodeada do que me faz bem 👍</h2>
+  <h1>✨ Bem vinda ao blog de kaka e castrinho ✨</h1>
+
 
   <a href="sessoes.html" class="btn">Clique para iniciar</a>
 
